# cookiecutter-pypackage

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug + '.git'}}/: .editorconfig  .envrc  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug + '.git'}}/docs/: conf.py  contributing.rst  contributors.rst  index.rst  installation.rst
{{cookiecutter.project_slug + '.git'}}/docs/api/: modules.rst  {{cookiecutter.package_name}}.rst
{{cookiecutter.project_slug + '.git'}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_slug + '.git'}}/src/{{cookiecutter.package_name}}/cli/: base.py  core.py  settings.py  utils.py
{{cookiecutter.project_slug + '.git'}}/tasks/: __init__.py  docs.py  generate.py  helpers.py
{{cookiecutter.project_slug + '.git'}}/tests/: __init__.py
{{cookiecutter.project_slug}}/: .envrc  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/docs/: conduct.rst  index.rst  installation.rst  license.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/_vendored/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/cli/: __init__.py  base.py  core.py  settings.py
{{cookiecutter.project_slug}}/tasks/: generate.py  helpers.py
