{% set is_open_source = cookiecutter.license != 'Not open source' -%}
[metadata]
description = {{ cookiecutter.project_short_description }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
url = https://www.github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
long_description = file: README.md
long_description_content_type = text/markdown
{% if is_open_source %}
license = {{ cookiecutter.license }}
license_file = LICENSE
{%- endif %}
keywords =
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    {% if is_open_source %}
    License :: OSI Approved :: {{ cookiecutter.license }} License
    {%- endif %}

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
exclude =
    .git,
    .eggs,
    __pycache__,
    docs/,
    tests/,
    dist/,
    setup.py
ignore =
    # Defaults:
    E121,E123,E126,E226,E24,E704,W503,W504,

[mypy]
ignore_missing_imports = true
follow_imports = skip
html_report = mypyhtml
python_version = 3.7
mypy_path = typeshed/pyi:typeshed/imports
